--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Data Week - Chemist & Druggist</title>
+    <title>Science Museum - hackathon</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
