--- a/web/index.html
+++ b/web/index.html
@@ -6,12 +6,14 @@
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <script src="js/d3.v3.min.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 
 <body>
     <div id="visualisationWrapper"></div>
+    <div id="axisDiv"></div>
     <script src="js/SM.js" type="text/javascript">
     </script>
 </body>
